--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     </aside>
     </header>
     <section>
+        <img src="programmer.png" alt="A programmer working on a laptop" style="width:100%; height:auto;">
         <h2>Footer Section</h2>
         <p>&copy; 2025 My Beautiful Webpage. All rights reserved.</p>
 </body>
